<?xml version="1.0"?>
<package>
    <name>android_core</name>
    <version>0.2.0</version>
    <description>
        Android support packages for rosjava.
    </description>
    <url type="website">http://ros.org/wiki/android_core</url>
    <url type="repository">https://github.com/rosjava/android_core</url>
    <url type="bugtracker">https://github.com/rosjava/android_core/issues</url>
    <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
    <maintainer email="damonkohler@google.com">Damon Kohler</maintainer>
    <author email="damonkohler@google.com">Damon Kohler</author>
    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>rosjava_core</build_depend>
</package>
